# Conway-life

./: LICENSE  README.md  conway-life.cabal  conway-life.cabal~  file.in  file.in~  gun.in  gun.in~  stack.yaml~
app/: Main.hs
src/: Config.hs  Config.hs~  Game_graphics.hs  Game_graphics.hs~  Game_grphics.hs~  Game_logic.hs  Game_logic.hs~  Lib.hs  Types.hs  Types.hs~
